# Key-the-password-manager

./: Cargo.toml  Header.h  Keys.db  Panov.txt  Project_A_final.vcxproj.filters  Project_A_final.vcxproj.xml  README.md  Steam.txt  funcs.cpp  main.cpp  panov.txt
.github/workflows/: rust.yml
Passwords/: suka.txt
src/: Header.h  build.rs  crypto.rs  database.rs  db.rs  finder.rs  funcs.cpp  funcs.rs  input.rs  iomod.rs  main.rs
x64/: Project_A1.vcxproj
x64/Debug/: Project_A_final.exe.recipe  Project_A_final.ilk  vc143.idb
x64/Debug/Project_A_final.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project_A_final.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Project_A_final.exe.recipe  Project_A_final.ipdb
x64/Release/Project_A_final.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project_A_final.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
