[package]
name = "pass"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"

[dependencies]
rand = "0.8.5"
console = "0.15.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
